fix:删除掉邮件/密码注册和登录

--- a/frontend-new/index.html
+++ b/frontend-new/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cosv-horizon</title>
+    <title>cosv-horizon - 开源漏洞数据中心</title>
+    <meta
+      name="description"
+      content="cosv-horizon 是基于 COSV Schema 的开源漏洞数据中心与协作平台，支持漏洞提交、审核、检索与共享，提供组织与个人积分榜、API 接口与自动导入能力，帮助构建安全透明的开源供应链。cosv-horizon is an open-source vulnerability collaboration platform built on the COSV schema."
+    >
   </head>
   <body>
     <div id="app"></div>
